--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.example</groupId>
-    <artifactId>ClientBankH1</artifactId>
+    <artifactId>ClientBankH1GitHub</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>ClientBank</name>
     <description>ClientBank</description>
