--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,1 +1,12 @@
 server.port=9000
+#spring.sql.init.mode=always
+#spring.sql.init.schema-locations=classpath:sql/schema-h2.sql
+#spring.sql.init.data-locations=classpath:sql/data-h2.sql
+#spring.h2.console.enabled=true
+#spring.h2.console.settings.trace=false
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.defer-datasource-initialization = true
+#spring.jpa.hibernate.ddl-auto=none
