--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=ClientBankH1
 spring.profiles.active=prod
+
+#spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.jpa.show-sql=true
