--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ClientBankH1
+spring.application.name=ClientBank
 spring.profiles.active=prod
 
 #spring.jpa.hibernate.ddl-auto=update
