--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ClientBank
-spring.profiles.active=local-postgres
+spring.profiles.active=prod
 
 #spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
