--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://c3l5o0rb2a6o4l.cluster-czz5s0kz4scl.eu-west-1.rds.amazonaws.com/d9q675hsis3qjn
+spring.datasource.url=${DB}
 spring.datasource.username=${USER_NAME}
 spring.datasource.password=${USER_PASSWORD}
 spring.sql.init.schema-locations=classpath:sql/schema-postgres.sql
