--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,3 +5,4 @@ spring.datasource.username=${USER_NAME}
 spring.datasource.password=${USER_PASSWORD}
 spring.sql.init.schema-locations=classpath:sql/schema-postgres.sql
 spring.sql.init.data-locations=classpath:sql/data-postgres.sql
+#spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
