--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.profiles.active=prod
 
 #spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
+#spring.sql.init.mode=never
+spring.liquibase.enabled=false
 spring.jpa.show-sql=true
