--- a/src/main/resources/application-local-h2.properties
+++ b/src/main/resources/application-local-h2.properties
@@ -1,9 +1,11 @@
 server.port=9000
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.sql.init.schema-locations=classpath:sql/schema-h2.sql
 spring.sql.init.data-locations=classpath:sql/data-h2.sql
 spring.h2.console.enabled=true
 spring.h2.console.settings.trace=false
 spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:file:./db
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
