--- a/src/main/resources/application-local-postgres.properties
+++ b/src/main/resources/application-local-postgres.properties
@@ -3,5 +3,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=12345User
-spring.sql.init.schema-locations=classpath:sql/schema-postgres.sql
-spring.sql.init.data-locations=classpath:sql/data-postgres.sql
+#spring.sql.init.schema-locations=classpath:sql/schema-postgres.sql
+#spring.sql.init.data-locations=classpath:sql/data-postgres.sql
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
