added liquibase and data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=ClientBank
 spring.profiles.active=prod
 
-#spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=always
-#spring.sql.init.mode=never
-spring.liquibase.enabled=false
+spring.sql.init.mode=never
+spring.liquibase.enabled=true
 spring.jpa.show-sql=true
