--- a/src/main/resources/application-local-postgres.properties
+++ b/src/main/resources/application-local-postgres.properties
@@ -3,6 +3,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=12345User
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+#spring.jpa.hibernate.ddl-auto=update
+#spring.sql.init.mode=always
 #spring.sql.init.schema-locations=classpath:sql/schema-postgres.sql
 #spring.sql.init.data-locations=classpath:sql/data-postgres.sql
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
