--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,6 +3,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=${DB}
 spring.datasource.username=${USER_NAME}
 spring.datasource.password=${USER_PASSWORD}
-spring.sql.init.schema-locations=classpath:sql/schema-postgres.sql
-spring.sql.init.data-locations=classpath:sql/data-postgres.sql
-#spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+#spring.jpa.hibernate.ddl-auto=update
+#spring.sql.init.mode=always
+#spring.sql.init.schema-locations=classpath:sql/schema-postgres.sql
+#spring.sql.init.data-locations=classpath:sql/data-postgres.sql
