--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -8,4 +8,4 @@ databaseChangeLog:
   - include:
       file: db/changelog/changeset/create-customers_employers-table.yaml
   - include:
-      file: db/changelog/changeset/insert-data.yaml
+      file: db/changelog/changeset/insert-data.sql
