added env, spring security

--- a/src/main/resources/application-local-postgres.properties
+++ b/src/main/resources/application-local-postgres.properties
@@ -1,8 +1,8 @@
 server.port=9000
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=12345User
+spring.datasource.url=${DB_LOCAL}
+spring.datasource.username=${USER_NAME_LOCAL}
+spring.datasource.password=${USER_PASSWORD_LOCAL}
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 #spring.jpa.hibernate.ddl-auto=update
 #spring.sql.init.mode=always
