--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.profiles.active=prod
 spring.sql.init.mode=never
 spring.liquibase.enabled=true
 spring.jpa.show-sql=true
+
+jwt.secret.access = ${JWT_SECRET_ACCESS}
+jwt.secret.refresh = ${JWT_SECRET_REFRESH}
